Update to model 0.0.54 and metamodel 0.0.27
The more relevant changes in the new version of the model are the
following:

- Add HealthState field to Cluster type
- Refactor alerts and operator conditions to contain only
  'CriticalAlerts' and 'OperatorsConditionFailing'
- Adding computeNodesSockets to cluster metrics
- Fix pull secret deletion path
- Remove unsupported cluster state
- Add machine type category

The more relevant changes in the new version of the metamodel are the
following:

- Update file header year to 2020
